# Wildfire-Simulation

./: BiomeAtlas.hpp  CMakeLists.txt  Component.hpp  ComponentManager.hpp  GameSettingsConstants.hpp  LICENSE  Makefile  PositionComponent.hpp  README.md  RenderEngine.cpp  RenderEngine.hpp  RenderInfoComponent.hpp  Scale.hpp  SimulationPresets.hpp  TileComponent.hpp  WindComponent.hpp  game.cpp  game.hpp  helperFunctions.hpp  main.cpp
lib/: Array_Grid.hpp  Class Comment Template.txt  Comment Template.txt  Vec2f.cpp  Vec2f.hpp  Vec2i.cpp  Vec2i.hpp  Vector_Grid.hpp
